2011-05-08  Ryosuke Niwa  <rniwa@webkit.org>

Reviewed by Kent Tamura.

        selectstart event does not fire when selection is made via select all
        https://bugs.webkit.org/show_bug.cgi?id=60376

        Added tests to ensure selectstart event is fired when a user selects all contents
        and script can prevent such selection change in selectstart's event handler.

        * fast/events/selectstart-on-selectall-expected.txt: Added.
        * fast/events/selectstart-on-selectall.html: Added.
        * fast/events/selectstart-prevent-selectall-expected.txt: Added.
        * fast/events/selectstart-prevent-selectall.html: Added.
2011-05-08  Ryosuke Niwa  <rniwa@webkit.org>

        Reviewed by Kent Tamura.

        selectstart event does not fire when selection is made via select all
        https://bugs.webkit.org/show_bug.cgi?id=60376

        Fire selectstart event when a user selects all contents (i.e. document.execCommand('SelectAll')) in
        document, editable region, or text control.

        Tests: editing/selection/selectstart-on-selectall.html
               editing/selection/selectstart-prevent-selectall.html

        * dom/Node.h: Removed canSelectAll and selectAll as they are left over from WMLSelectElement.
        * editing/FrameSelection.cpp:
        (WebCore::FrameSelection::selectAll): Dispatch selectstart event on selectStartTarget, which is
        input element or textarea element when the current selection is inside a shadow DOM, and the root
        editable element if it's inside a non-shadow editable region, and the body element otherwise.
        * html/HTMLSelectElement.h: Made canSelectAll and selectAll public since they are no longer
        declared in Node.


Canonical link: https://commits.webkit.org/75714@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@86041 268f45cc-cd09-0410-ab3c-d52691b4dbfc